# LaPosteReleve

./: .gitignore  README.md  build.sh
cli/: Cargo.toml  config.toml  init-db.toml  postgresql-docker.md
cli/data/: input01.csv  input02.csv  input03.csv
cli/migrations/2021-11-21-103233_init_tables/: down.sql  up.sql
cli/src/: actions.rs  csv.rs  db.rs  db_schema.rs  errors.rs  main.rs  models.rs
cli/src/actions/: csv2db.rs  handlers.rs  http.rs  tagging.rs
cli/src/csv/: dir.rs  parsing.rs
cli/src/db/: postgres.rs  sqlite.rs
webapp/: jest.config.js  package-lock.json  package.json  tsconfig.json
webapp/src/: index.css  index.html  index.tsx
webapp/src/Components/: Activities.tsx  ActivitiesTable.tsx  ActivityDetails.tsx  BarStats.tsx  Graph.tsx  Header.tsx  Layout.tsx  Search.tsx  TagPattern.tsx  TagPatternList.tsx
webapp/src/Components/__test__/: ActivitiesTable.test.tsx  TagPatternList.test.tsx
webapp/src/Components/__test__/__snapshots__/: ActivitiesTable.test.tsx.snap  TagPatternList.test.tsx.snap
webapp/src/Components/__test__/data/: activities.json  balance.json  tags.json  tagspattern.json
