[package]
name = "la-poste-releve-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44" } 
chrono = { version = "0.4.19", features = ["serde"] }
confy = "0.4.0"
csv = "1.1.6"
futures = "0.3.17"
itertools = "0.10.1"
ordered-float = { version = "2.8.0", features = ["serde"] }
#https://stackoverflow.com/questions/67069764/how-to-insert-and-fetch-date-in-a-sqlite-database-using-rusqlite
rusqlite = { version = "0.26.0", features = ["chrono"] }
serde = { version = "1.0.130", features = ["derive"] }
#https://stackoverflow.com/questions/63874178/cannot-find-tokiomain-macro
tokio =  { version = "1.12.0", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
warp = "0.3.1"
